Basic pacman ready

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
   body {
     margin: 0;
     background-color: black;
+    font-family: sans-serif;
+    padding: 10px 20px;
+  }
+  p {
+    font-size: 14px;
+    color: white;
+    margin-bottom: 6px;
   }
 </style>
+
+<p>
+  <span>Score: <span id="scoreEl">0</span></span>
+</p>
 <canvas></canvas>
 <script src="./index.js"></script>
